force-app/main/default/objects/Test_Score_Definition__mdt/Test_Score_Definition__mdt.object-meta.xml
<CustomObject>
    <description>A definition of a test score by subject area and test type, including its passing values</description>
    <label>Test Score Definition</label>
    <pluralLabel>Test Score Definitions</pluralLabel>
</CustomObject>