force-app/main/default/objects/Test_Score_Definition__mdt/fields/Grading_Type__c.field-meta.xml
<CustomField>
    <fullName>Grading_Type__c</fullName>
    <description>The grading type of the Test Score.</description>
    <inlineHelpText>The grading type of the Test Score.</inlineHelpText>
    <label>Grading Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter</fullName>
                <default>true</default>
                <label>Letter</label>
            </value>
            <value>
                <fullName>Numerical</fullName>
            </value>
            <value>
                <fullName>Percentile</fullName>
            </value>
            <value>
                <fullName>Performance Level</fullName>
            </value>
            <value>
                <fullName>Result</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>