force-app/main/default/objects/Test_Score_Definition__mdt/fields/Maximum_Score__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Score__c</fullName>
    <description>The maximum numerical score for the Test.</description>
    <inlineHelpText>The maximum numerical score for the Test.</inlineHelpText>
    <label>Maximum Score</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>