force-app/main/default/objects/Test_Score_Definition__mdt/fields/Minimum_Score__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Score__c</fullName>
    <description>The minimum numerical score for the Test.</description>
    <inlineHelpText>The minimum numerical score for the Test.</inlineHelpText>
    <label>Minimum Score</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>