force-app/main/default/objects/Test_Score_Definition__mdt/fields/Passing_Value__c.field-meta.xml
<CustomField>
    <fullName>Passing_Value__c</fullName>
    <description>The minimum passing value for the Test.</description>
    <inlineHelpText>The minimum passing value for the Test.</inlineHelpText>
    <label>Passing Value</label>
    <length>20</length>
    <type>Text</type>
</CustomField>