force-app/main/default/objects/Test_Score_Definition__mdt/fields/Possible_Results__c.field-meta.xml
<CustomField>
    <fullName>Possible_Results__c</fullName>
    <description>For tests that use non-numerical scores, the possible results expressed as a comma-delimited list. For example, &quot;Pass&quot;, &quot;Fail&quot; or &quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, &quot;F&quot;.</description>
    <inlineHelpText>For tests that use non-numerical scores, the possible results expressed as a comma-delimited list. For example, &quot;Pass&quot;, &quot;Fail&quot; or &quot;A&quot;, &quot;B&quot;, &quot;C&quot;, &quot;D&quot;, F&quot;.</inlineHelpText>
    <label>Possible Results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>