force-app/main/default/objects/Test_Score_Definition__mdt/fields/Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>Subject_Area__c</fullName>
    <description>The subject area of the Test Score Definition. For example, Reading or Science.</description>
    <inlineHelpText>The subject area of the Test Score Definition. For example, Reading or Science.</inlineHelpText>
    <label>Subject Area</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Language</fullName>
                <default>true</default>
                <label>Language</label>
            </value>
            <value>
                <fullName>Mathematics</fullName>
            </value>
            <value>
                <fullName>Reading</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Overall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>