force-app/main/default/objects/Test_Score_Definition__mdt/fields/Test_Definition__c.field-meta.xml
<CustomField>
    <fullName>Test_Definition__c</fullName>
    <description>The Test Definition that the Test Score applies to.</description>
    <inlineHelpText>The Test Definition that the Test Score applies to.</inlineHelpText>
    <label>Test Definition</label>
    <referenceTo>Test_Definition__mdt</referenceTo>
    <relationshipLabel>Test Score Definitions</relationshipLabel>
    <relationshipName>Test_Score_Definitions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>