force-app/main/default/objects/Test_Score_Definition__mdt/listViews/All_Test_Score_Definitions.listView-meta.xml
<ListView>
    <fullName>All_Test_Score_Definitions</fullName>
    <columns>MasterLabel</columns>
    <columns>Test_Definition__c</columns>
    <columns>Subject_Area__c</columns>
    <columns>Grading_Type__c</columns>
    <columns>Passing_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Test Score Definitions</label>
    <language>en_US</language>
</ListView>